--- a/public/skin/dark/skin.css
+++ b/public/skin/dark/skin.css
@@ -1,4 +1,8 @@
 :root {
   --color-bg: #1e1e1e;
   --color-text: #d4d4d4;
+  --color-border: #cccccc;
+  --color-side-bg: #333333;
+  --color-caption-bg: #949494;
+  --color-caption-text: #000000;
 }
