基本功能实现
Co-authored-by: darren_daniel_day@hotmail.com <darren_daniel_day@hotmail.com>
Co-authored-by: IwAntACqaq <494812665@qq.com>

--- a/public/skin/light/skin.css
+++ b/public/skin/light/skin.css
@@ -1,4 +1,8 @@
 :root {
   --color-bg: #fff;
   --color-text: #333;
+  --color-border: #cccccc;
+  --color-side-bg: #fff;
+  --color-caption-bg: #d8e6f5;
+  --color-caption-text: #000000;
 }
